--- a/athlete_info.html
+++ b/athlete_info.html
@@ -135,7 +135,7 @@
                                 <div class="img" style="background-image: url(images/trainer-1.jpg);"></div>
                                 <div class="text bg-white p-4 ftco-animate">
                                     <h3 class="pt"><a href="#">Mark Brook</a></h3>
-                                    <p>Our fitness is important and something we should all enjoy. My aim is to create a positive and fun experience for clients, as well as using the best of my knowledge and experience to help clients achieve their goals.</p>
+                                    <p style = "color:black;">Our fitness is important and something we should all enjoy. My aim is to create a positive and fun experience for clients, as well as using the best of my knowledge and experience to help clients achieve their goals.</p>
                                     <ul class="ftco-social-media d-flex mt-4" style="display:flex; justify-content:center; ">
                                         <li class="ftco-animate"><a href="https://twitter.com/?lang=pt_pt" class="mr-2 d-flex justify-content-center align-items-center"><span class="icon-twitter"></span></a></li>
                                         <li class="ftco-animate"><a href="https://pt-pt.facebook.com/" class="mr-2 d-flex justify-content-center align-items-center"><span class="icon-facebook"></span></a></li>
@@ -162,7 +162,7 @@
                                 <div class="img" style="background-image: url(images/gym_premade.jpg);"></div>
                                 <div class="text bg-white p-4 ftco-animate">
                                     <h3 class="gym"><a href="#">FitMAS</a></h3>
-                                    <p>Step into our spacious gym and you'll feel the difference. A buzz of energy and inspiration. A community unmatched amenities and some of the best studio classes. Come in and discover all you imagined and more.
+                                    <p style = "color:black;">Step into our spacious gym and you'll feel the difference. A buzz of energy and inspiration. A community unmatched amenities and some of the best studio classes. Come in and discover all you imagined and more.
                                     </p>
                                     <ul class="ftco-social-media d-flex mt-4" style="display:flex; justify-content:center; ">
                                         <li class="ftco-animate"><a href="https://twitter.com/?lang=pt_pt" class="mr-2 d-flex justify-content-center align-items-center"><span class="icon-twitter"></span></a></li>
