--- a/Ginasio.html
+++ b/Ginasio.html
@@ -69,7 +69,7 @@
         </div>
     </section>
 <br>
-  <footer class="ftco-footer ftco-section img">
+    <footer class="ftco-footer ftco-section img">
         <div class="overlay"></div>
         <div class="container">
             <div class="row mb-5" style="display: flex; justify-content:center;">
@@ -78,7 +78,8 @@
                         <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
                     </div>
                 </div>
-
+            </div>
+        </div>
     </footer>
     <!-- loader -->
 
