--- a/athlete_chat.html
+++ b/athlete_chat.html
@@ -86,15 +86,10 @@
 <body>
     <br>
     <br>
-
     <br>
-
     <br>
-
     <br>
-
     <br>
-
     <br>
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -133,7 +128,7 @@
                         </div>
                         <div class="panel-footer">
                             <div class="input-group">
-                                <input id="btn-input0" type="text" class="form-control input-sm" placeholder="Type your message here..." />
+                                <input id="btn-input0" type="text" class="form-control input-sm" style="padding:2px;" placeholder="Type your message here..." />
                                 <span class="input-group-btn">
                                         <button class="btn btn-primary btn-lg" style="height:58px;"id="btn-chat0">
                                             Send</button>
