--- a/loginLucas.html
+++ b/loginLucas.html
@@ -83,6 +83,10 @@
                                 <input type="button " value="Login" class="btn btn-primary py-3 px-5 done">
                             </div>
                         </div>
+                        <span style="color:black;">Ginásio--> User: KnockOut   Pass: passteste1<br>PT--> User: Dinis   Pass: passteste2<br>Athlete--> User: Francisca   Pass: passteste3</span>
+
+
+
                     </form>
                 </div>
 
