--- a/athlete_chat.html
+++ b/athlete_chat.html
@@ -100,10 +100,10 @@
 	      </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="athlete_info.html" class="nav-link">Info</a></li>
+                    <li class="nav-item"><a href="athlete_info.html" class="nav-link">Info</a></li>
                     <li class="nav-item"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
                     <li class="nav-item"><a href="athlete_plan.html" class="nav-link">Workout Plan</a></li>
-                    <li class="nav-item"><a href="athlete_chat.html" class="nav-link">Chat</a></li>
+                    <li class="nav-item active"><a href="athlete_chat.html" class="nav-link">Chat</a></li>
                     <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
                 </ul>
             </div>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>~
         </div>
     </section>
     <br>
@@ -154,9 +154,6 @@
         </div>
     </footer>
 
-
-    <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
     <script src="js/jquery.min.js"></script>
@@ -199,51 +196,52 @@
 
 </body>
 
-</html> </div>
-    </footer>
+</html>
+</div>
+</footer>
 
 
-    <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+<!-- loader -->
 
+<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/jquery.timepicker.min.js"></script>
-    <script src="js/scrollax.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
-    <script>
-        $(document).ready(function() {
-            var data = JSON.parse(window.localStorage.getItem("Data"))
-            $("#btn-chat0").click(function() {
-                var AtletaChat0 = JSON.parse(window.localStorage.getItem("user2"))
-                console.log(AtletaChat0);
-                var msg = $("#btn-input0").val();
-                AtletaChat0.mensagens.push(data.Name + "  said:  " + msg);
-                window.localStorage.setItem("user2", JSON.stringify(AtletaChat0));
-                console.log(msg)
-                console.log(data)
-                $(".chat0").append('<div class="chat-body clearfix"><p>' + data.Name + "  said:  " + msg + '</p></div>');
-                $("#btn-input0").val("")
-            })
-            var DataDoAtleta = JSON.parse(window.localStorage.getItem("user2"));
-            DataDoAtleta.mensagens.forEach(function(Element) {
-                $(".chat0").append('<div class="chat-body clearfix"><p>' + Element + '</p></div>');
-            })
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery-migrate-3.0.1.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/aos.js"></script>
+<script src="js/jquery.animateNumber.min.js"></script>
+<script src="js/bootstrap-datepicker.js"></script>
+<script src="js/jquery.timepicker.min.js"></script>
+<script src="js/scrollax.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+<script src="js/google-map.js"></script>
+<script src="js/main.js"></script>
+<script>
+    $(document).ready(function() {
+        var data = JSON.parse(window.localStorage.getItem("Data"))
+        $("#btn-chat0").click(function() {
+            var AtletaChat0 = JSON.parse(window.localStorage.getItem("user2"))
+            console.log(AtletaChat0);
+            var msg = $("#btn-input0").val();
+            AtletaChat0.mensagens.push(data.Name + "  said:  " + msg);
+            window.localStorage.setItem("user2", JSON.stringify(AtletaChat0));
+            console.log(msg)
+            console.log(data)
+            $(".chat0").append('<div class="chat-body clearfix"><p>' + data.Name + "  said:  " + msg + '</p></div>');
+            $("#btn-input0").val("")
         })
-    </script>
+        var DataDoAtleta = JSON.parse(window.localStorage.getItem("user2"));
+        DataDoAtleta.mensagens.forEach(function(Element) {
+            $(".chat0").append('<div class="chat-body clearfix"><p>' + Element + '</p></div>');
+        })
+    })
+</script>
 
 </body>
 
