--- a/athlete_chat.html
+++ b/athlete_chat.html
@@ -83,13 +83,18 @@
     </style>
 </head>
 
-<body>
+<body style="background-color: rgb(97, 97, 97);">
     <br>
     <br>
+
     <br>
+
     <br>
+
     <br>
+
     <br>
+
     <br>
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -100,10 +105,10 @@
 	      </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="athlete_info.html" class="nav-link">Info</a></li>
+                    <li class="nav-item active"><a href="athlete_info.html" class="nav-link">Info</a></li>
                     <li class="nav-item"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
                     <li class="nav-item"><a href="athlete_plan.html" class="nav-link">Workout Plan</a></li>
-                    <li class="nav-item active"><a href="athlete_chat.html" class="nav-link">Chat</a></li>
+                    <li class="nav-item"><a href="athlete_chat.html" class="nav-link">Chat</a></li>
                     <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
                 </ul>
             </div>
@@ -113,7 +118,8 @@
 
 
     <section>
-        <div class="container" style="background-color:rgba(0, 0, 0, 0.842);">
+        <div class="container"></div>
+        <div class="container" style="border:1px">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-primary">
@@ -128,7 +134,7 @@
                         </div>
                         <div class="panel-footer">
                             <div class="input-group">
-                                <input id="btn-input0" type="text" class="form-control input-sm" style="padding:2px;" placeholder="Type your message here..." />
+                                <input id="btn-input0" type="text" class="form-control input-sm" placeholder="Type your message here..." />
                                 <span class="input-group-btn">
                                         <button class="btn btn-primary btn-lg" style="height:58px;"id="btn-chat0">
                                             Send</button>
@@ -140,7 +146,6 @@
             </div>
         </div>
     </section>
-    <br>
     <footer class="ftco-footer ftco-section img">
         <div class="overlay"></div>
         <div class="container">
@@ -150,10 +155,12 @@
                         <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
                     </div>
                 </div>
-            </div>
-        </div>
+
     </footer>
 
+
+    <!-- loader -->
+    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
     <script src="js/jquery.min.js"></script>
@@ -193,55 +200,6 @@
             })
         })
     </script>
-
-</body>
-
-</html>
-</div>
-</footer>
-
-
-<!-- loader -->
-
-<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/bootstrap-datepicker.js"></script>
-<script src="js/jquery.timepicker.min.js"></script>
-<script src="js/scrollax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
-<script>
-    $(document).ready(function() {
-        var data = JSON.parse(window.localStorage.getItem("Data"))
-        $("#btn-chat0").click(function() {
-            var AtletaChat0 = JSON.parse(window.localStorage.getItem("user2"))
-            console.log(AtletaChat0);
-            var msg = $("#btn-input0").val();
-            AtletaChat0.mensagens.push(data.Name + "  said:  " + msg);
-            window.localStorage.setItem("user2", JSON.stringify(AtletaChat0));
-            console.log(msg)
-            console.log(data)
-            $(".chat0").append('<div class="chat-body clearfix"><p>' + data.Name + "  said:  " + msg + '</p></div>');
-            $("#btn-input0").val("")
-        })
-        var DataDoAtleta = JSON.parse(window.localStorage.getItem("user2"));
-        DataDoAtleta.mensagens.forEach(function(Element) {
-            $(".chat0").append('<div class="chat-body clearfix"><p>' + Element + '</p></div>');
-        })
-    })
-</script>
 
 </body>
 
